--- a/index.html
+++ b/index.html
@@ -3,7 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Projet Watch One</title>
   </head>
-  <body></body>
+  <body>
+    <section>
+      <div class="badge">
+        <p>"Offre limitée : 30% pendant 7 jours"</p>
+        <p>
+          “Profitez de notre offre de lancement exclusive pour découvrir la
+          WatchOne. Livraison gratuite incluse !ˮ
+        </p>
+      </div>
+      <button>Commander maintenant</button>
+      <img src="assets/images/watch1.jpg" alt="images d'un montre" />
+      <p>"01/05/2025"</p>
+      <p>: “20% pendant 7 joursˮ</p>
+    </section>
+  </body>
 </html>
