(mika) Mise en place de la structure html

--- a/index.html
+++ b/index.html
@@ -13,12 +13,23 @@
     <title>WatchOne</title></head
   >:=
   <body>
+    <header></header>
+    <!-- MISE EN PLACE DU HEADER -->
     <section class="hero">
+      <!-- MISE EN PLACE DE LA SECTION HERO-->
       <img src="./assets/smart_watch.jpg" alt="Montre connectée" />
       <h1>La montre connectée éthique, performante et design</h1>
       <a href="#">
         <button>Découvrir</button>
       </a>
     </section>
+    <section class="caracteristiques"></section>
+    <!-- MISE EN PLACE DE LA SECTION CARACTERISTIQUES-->
+    <section></section>
+    <!-- MISE EN PLACE DE LA SECTION AVIS-->
+    <section></section>
+    <!-- MISE EN PLACE DE LA SECTION OFFRE SPECIALE-->
+    <footer></footer>
+    <!-- MISE EN PLACE DU FOOTER -->
   </body>
 </html>
