--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="FR">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,11 +7,13 @@
   </head>
   <body>
     <header>
-      <div>
-        <div>logo</div>
-        <nav>Accueil Navigation Caractéristiques Avis</nav>
+      <nav>
+        <div>WatchOne</div>
+        <nav>Accueil</nav>
+        <nav>Caractéristiques</nav>
+        <nav>Avis</nav>
         <button>Commander</button>
-      </div>
+      </nav>
     </header>
 
     <header></header>
