--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./scss/main.css" />
-    <title>WatchOne</title></head
-  >:=
+    <title>WatchOne</title>
+  </head>
   <body>
     <header></header>
     <!-- MISE EN PLACE DU HEADER -->
