--- a/index.html
+++ b/index.html
@@ -10,15 +10,26 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./scss/main.css" />
-    <title>WatchOne</title></head
-  >:=
+    <title>WatchOne</title>
+  </head>
   <body>
+    <header></header>
+    <!-- MISE EN PLACE DU HEADER -->
     <section class="hero">
+      <!-- MISE EN PLACE DE LA SECTION HERO-->
       <img src="./assets/smart_watch.jpg" alt="Montre connectée" />
       <h1>La montre connectée éthique, performante et design</h1>
       <a href="#">
         <button>Découvrir</button>
       </a>
     </section>
+    <section class="caracteristiques"></section>
+    <!-- MISE EN PLACE DE LA SECTION CARACTERISTIQUES-->
+    <section></section>
+    <!-- MISE EN PLACE DE LA SECTION AVIS-->
+    <section></section>
+    <!-- MISE EN PLACE DE LA SECTION OFFRE SPECIALE-->
+    <footer></footer>
+    <!-- MISE EN PLACE DU FOOTER -->
   </body>
 </html>
