chore (brajanS): Structure HTML

--- a/index.html
+++ b/index.html
@@ -25,7 +25,25 @@
     </section>
     <section class="caracteristiques"></section>
     <!-- MISE EN PLACE DE LA SECTION CARACTERISTIQUES-->
-    <section></section>
+    <section id="avis">
+      <div>
+        <div class="card">
+          <img src="" alt="Photo de Marie" class="avatar" />
+          <div class="quote-mark">“</div>
+          <p class="quote">Super service, je recommande à 100% !</p>
+          <p class="name">Marie D.</p>
+          <div class="rating">⭐⭐⭐⭐⭐</div>
+        </div>
+
+        <div class="card">
+          <img src="" alt="Photo de Paul" class="avatar" />
+          <div class="quote-mark">“</div>
+          <p class="quote">Très satisfait, expérience fluide et rapide.</p>
+          <p class="name">Paul T.</p>
+          <div class="rating">⭐⭐⭐⭐</div>
+        </div>
+      </div>
+    </section>
     <!-- MISE EN PLACE DE LA SECTION AVIS-->
     <section></section>
     <!-- MISE EN PLACE DE LA SECTION OFFRE SPECIALE-->
