--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   </head>
   <body>
     <header>
+      <div id="logo">WatchOne</div>
       <nav>
-        <div>WatchOne</div>
         <nav>Accueil</nav>
         <nav>Caractéristiques</nav>
         <nav>Avis</nav>
@@ -16,6 +16,10 @@
       </nav>
     </header>
 
-    <header></header>
+    <header>
+      <nav>accueil Caractéristiques Avis</nav>
+      <p>Réseau Sociaux</p>
+      <p>mention Légales</p>
+    </header>
   </body>
 </html>
