suppression des fichiers css

--- a/index.html
+++ b/index.html
@@ -18,13 +18,52 @@
     <main>
       <section class="hero">
         <!-- MISE EN PLACE DE LA SECTION HERO-->
-        <img src="./assets/smart_watch.jpg" alt="Montre connectée" />
+        <img src="./assets/images/smart_watch.jpg" alt="Montre connectée" />
         <h1>La montre connectée éthique, performante et design</h1>
         <a href="#">
           <button>Découvrir</button>
         </a>
       </section>
-      <section class="caracteristiques"></section>
+      <section class="caracteristiques">
+        <h2>Caractéristiques</h2>
+        <div>
+          <div class="card">
+            <div class="icon"></div>
+            <div class="title">Autonomie 7 jours</div>
+            <div class="text">
+              Une autonomie prolongée pour tenir toute la semaine sans recharge.
+            </div>
+          </div>
+          <div class="card">
+            <div class="icon"></div>
+            <div class="title">Waterproof</div>
+            <div class="text">
+              Résiste à l'eau, parfaite pour toutes les conditions.
+            </div>
+          </div>
+          <div class="card">
+            <div class="icon"></div>
+            <div class="title">Recyclée à 80%</div>
+            <div class="text">
+              Fabriquée à partir de matériaux recyclés pour un impact réduit.
+            </div>
+          </div>
+          <div class="card">
+            <div class="icon"></div>
+            <div class="title">Design personnalisable</div>
+            <div class="text">
+              Changez les couleurs, les bracelets et plus selon votre style.
+            </div>
+          </div>
+          <div class="card">
+            <div class="icon"></div>
+            <div class="title">GPS</div>
+            <div class="text">
+              Suivi précis de vos trajets en temps réel, où que vous soyez.
+            </div>
+          </div>
+        </div>
+      </section>
       <!-- MISE EN PLACE DE LA SECTION CARACTERISTIQUES-->
       <section></section>
       <!-- MISE EN PLACE DE LA SECTION AVIS-->
