chore (brajanS): Ajout de avis

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <section id="avis">
       <div>
         <div class="card">
-          <img src="" alt="Photo de Marie" class="avatar" />
+          <img src="./assets/images/avis2.jpg" alt="Marie" class="avatar" />
           <div class="quote-mark">“</div>
           <p class="quote">Super service, je recommande à 100% !</p>
           <p class="name">Marie D.</p>
@@ -36,7 +36,7 @@
         </div>
 
         <div class="card">
-          <img src="" alt="Photo de Paul" class="avatar" />
+          <img src="./assets/images/avis3.jpg" alt="Paul" class="avatar" />
           <div class="quote-mark">“</div>
           <p class="quote">Très satisfait, expérience fluide et rapide.</p>
           <p class="name">Paul T.</p>
