fix(css): sup css et map

--- a/index.html
+++ b/index.html
@@ -3,23 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>WatchOne</title>
   </head>
+
   <body>
     <header>
-      <div id="logo">WatchOne</div>
       <nav>
-        <nav>Accueil</nav>
-        <nav>Caractéristiques</nav>
-        <nav>Avis</nav>
+        <div id="logo">WatchOne</div>
+        <ul class="menu"></ul>
+        <li>Accueil</li>
+        <li>Caractéristiques</li>
+        <li>Avis</li>
         <button>Commander</button>
       </nav>
     </header>
 
-    <header>
-      <nav>accueil Caractéristiques Avis</nav>
+    <footer>
+      <nav>Accueil Caractéristiques Avis</nav>
       <p>Réseau Sociaux</p>
       <p>mention Légales</p>
-    </header>
+    </footer>
   </body>
 </html>
