Fin de la structure HTML+ logos section Hero + caractéristiques

--- a/index.html
+++ b/index.html
@@ -24,39 +24,52 @@
           <button>Découvrir</button>
         </a>
       </section>
-      <section class="caracteristiques">
+      <section class="stats">
         <h2>Caractéristiques</h2>
         <div>
           <div class="card">
-            <div class="icon"></div>
+            <div class="icon">
+              <img src="./assets/images/sablier.png" alt="logo sablier" />
+            </div>
             <div class="title">Autonomie 7 jours</div>
             <div class="text">
               Une autonomie prolongée pour tenir toute la semaine sans recharge.
             </div>
           </div>
           <div class="card">
-            <div class="icon"></div>
+            <div class="icon">
+              <img src="./assets/images/eau.png" alt="Logo Waterproof" />
+            </div>
             <div class="title">Waterproof</div>
             <div class="text">
               Résiste à l'eau, parfaite pour toutes les conditions.
             </div>
           </div>
           <div class="card">
-            <div class="icon"></div>
+            <div class="icon">
+              <img src="./assets/images/recycler.png" alt="Logo recyclage" />
+            </div>
             <div class="title">Recyclée à 80%</div>
             <div class="text">
               Fabriquée à partir de matériaux recyclés pour un impact réduit.
             </div>
           </div>
           <div class="card">
-            <div class="icon"></div>
+            <div class="icon">
+              <img
+                src="./assets/images/personnalisable.png"
+                alt="logo personnalisable"
+              />
+            </div>
             <div class="title">Design personnalisable</div>
             <div class="text">
               Changez les couleurs, les bracelets et plus selon votre style.
             </div>
           </div>
           <div class="card">
-            <div class="icon"></div>
+            <div class="icon">
+              <img src="./assets/images/gps.png" alt="Logo gps" />
+            </div>
             <div class="title">GPS</div>
             <div class="text">
               Suivi précis de vos trajets en temps réel, où que vous soyez.
