feature (avis): ajoute d'avis

--- a/index.html
+++ b/index.html
@@ -26,21 +26,32 @@
     <section class="caracteristiques"></section>
     <!-- MISE EN PLACE DE LA SECTION CARACTERISTIQUES-->
     <section id="avis">
+      <h2>Avis clients:</h2>
       <div>
         <div class="card">
-          <img src="./assets/images/avis2.jpg" alt="Marie" class="avatar" />
-          <div class="quote-mark">“</div>
-          <p class="quote">Super service, je recommande à 100% !</p>
+          <div>
+            <img src="./assets/images/avis2.jpg" alt="Marie" class="avatar" />
+          </div>
+          <p class="quote">Super la montre, je recommande à 100% !</p>
           <p class="name">Marie D.</p>
-          <div class="rating">⭐⭐⭐⭐⭐</div>
+          <span>Note sur 5 étoile:</span>
+          <div class="rating">
+            <div>⭐⭐⭐⭐⭐</div>
+            <span>5/5 étoiles</span>
+          </div>
         </div>
 
         <div class="card">
-          <img src="./assets/images/avis3.jpg" alt="Paul" class="avatar" />
-          <div class="quote-mark">“</div>
+          <div>
+            <img src="./assets/images/avis3.jpg" alt="Paul" class="avatar" />
+          </div>
           <p class="quote">Très satisfait, expérience fluide et rapide.</p>
           <p class="name">Paul T.</p>
-          <div class="rating">⭐⭐⭐⭐</div>
+          <span>Note sur 5 étoile:</span>
+          <div class="rating">
+            <div>⭐⭐⭐⭐</div>
+            <span>4/5 étoiles</span>
+          </div>
         </div>
       </div>
     </section>
