fin de la structure html et css en cours

--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
     <main>
       <section class="hero">
         <!-- MISE EN PLACE DE LA SECTION HERO-->
-        <img src="./assets/images/smart_watch.jpg" alt="Montre connectée" />
+        <img
+          class="smart"
+          src="./assets/images/smart_watch.jpg"
+          alt="Montre connectée"
+        />
         <h1>La montre connectée éthique, performante et design</h1>
         <a href="#">
           <button>Découvrir</button>
