--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
     </header>
 
     <footer>
-      <nav>Accueil Caractéristiques Avis</nav>
-      <p>Réseau Sociaux</p>
-      <p>mention Légales</p>
+      <div class="footer_contenu">
+        <nav>Accueil Caractéristiques Avis</nav>
+        <p>Réseau Sociaux</p>
+        <p>Mention Légales</p>
+      </div>
     </footer>
   </body>
 </html>
